objects/TAV4__Geo_Container__c.object
<CustomObject>
    <description>TerrAlign geographical container types</description>
    <fields>
        <fullName>TAV4__Account_Lookup_Field__c</fullName>
        <defaultValue>&quot;BillingPostalCode&quot;</defaultValue>
        <description>Enter the field name of the Account field that contains the value corresponding to the container value. For most situations this will usually be the Billing Postal Code (BillingPostalCode) or the Shipping Postal Code (ShippingPostalCode). The field name must be entered, not the label.</description>
        <inlineHelpText>Enter the Account field name which contains the container lookup value</inlineHelpText>
        <label>Account Lookup Field</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Identifier_Length__c</fullName>
        <description>The length of the unit code to use for container lookups. For US ZIP codes this should be 5, for Canadian FSA codes it should be 3.</description>
        <label>Identifier Length</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__Lead_Lookup_Field__c</fullName>
        <defaultValue>&quot;PostalCode&quot;</defaultValue>
        <description>Enter the field name of the Lead field that contains the value corresponding to the container value. For most situations this will usually be the Postal Code (PostalCode). The field name must be entered, not the label.</description>
        <inlineHelpText>Enter the field name of the Lead field that contains the container lookup value.</inlineHelpText>
        <label>Lead Lookup Field</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Prefix__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The unique portion of the container data file name. This is usually the portion up to the first underscore but may be more, such as the case with US_FIPS.</inlineHelpText>
        <label>Prefix</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Geo Container</label>
    <listViews>
        <fullName>TAV4__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geo Container Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Containers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>